27 April 2007: Wouter
	- removed iov usage, it is not good for dns message encoding.
	- owner name compression more optimal.
	- rrsig owner name compression.

26 April 2007: Wouter
	- floating point exception fix in lock-verify.
	- lint uses make dependency
	- fixup lint in dname owner domain name compression code.
	- define for offset range that can be compressed to.

25 April 2007: Wouter
	- prettier code; parse_rrset->type kept in host byte order.
	- datatype used for hashvalue of converted rrsig structure.
	- unit test compares edns section data too.

24 April 2007: Wouter
	- ttl per RR, for RRSIG rrsets and others.
	- dname_print debug function.
	- if type is not known, size calc will skip DNAME decompression.
	- RRSIG parsing and storing and putting in messages.
	- dnssec enabled unit tests (from nlnetlabs.nl and se queries).
	- EDNS extraction routine.

20 April 2007: Wouter
	- code comes through all of the unit tests now.
	- disabled warning about spurious extra data.
	- documented the RRSIG parse plan in msgparse.h.
	- rrsig reading and outputting.

19 April 2007: Wouter
	- fix unit test to actually to tests.
	- fix write iov helper, and fakevent code.
	- extra builtin testcase (small packet).
	- ttl converted to network format in packets.
	- flags converted correctly
	- rdatalen off by 2 error fixup.
	- uses less iov space for header.

18 April 2007: Wouter
	- review of msgparse code.
	- smaller test cases.

17 April 2007: Wouter
	- copy and decompress dnames.
	- store calculated hash value too.
	- routine to create message out of stored information.
	- util/data/msgparse.c for message parsing code.
	- unit test, and first fixes because of test.
		* forgot rrset_count addition.
		* did & of ptr on stack for memory position calculation.
		* dname_pkt_copy forgot to read next label length.
	- test from file and fixes
		* double frees fixed in error conditions.
		* types with less than full rdata allowed by parser.